--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_mobx: ^2.0.4
   flutter_modular: ^4.5.0
+  sqflite: ^2.0.2
 
 dev_dependencies:
   flutter_test:
