--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,12 @@ dependencies:
   flutter_mobx: ^2.0.4
   flutter_modular: ^4.5.0
   sqflite: ^2.0.2
+  floor: ^1.1.0
+  
 
 dev_dependencies:
+  floor_generator: ^1.1.0
+  build_runner: ^2.1.2
   flutter_test:
     sdk: flutter
 
